test/visibility/except/blockSecondaryTypeMethod.good
blockSecondaryTypeMethod.chpl:9: error: unresolved call 'type Foo.newMethod(1)'
blockSecondaryTypeMethod.chpl:9: note: because no functions named newMethod found in scope
